logs/neurotools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NeuroTools'...
Listing './lib/python3.5/site-packages/NeuroTools/datastore'...
Compiling './lib/python3.5/site-packages/NeuroTools/datastore/shelve_ds.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/datastore/shelve_ds.py", line 48
    except Exception, errmsg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NeuroTools/optimize'...
Compiling './lib/python3.5/site-packages/NeuroTools/optimize/parameter_search.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/optimize/parameter_search.py", line 224
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NeuroTools/parameters'...
Compiling './lib/python3.5/site-packages/NeuroTools/sandbox.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/sandbox.py", line 176
    print 'Simulations start'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/NeuroTools/signals'...
Listing './lib/python3.5/site-packages/NeuroTools/spike2'...
Listing './lib/python3.5/site-packages/NeuroTools/spike2/sonpy'...
Compiling './lib/python3.5/site-packages/NeuroTools/spike2/sonpy/_waveform.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/spike2/sonpy/_waveform.py", line 15
    if data.dtype.name != 'int16': raise TypeError, '16 bit integer expected'
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NeuroTools/spike2/sonpy/son.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/spike2/sonpy/son.py", line 20
    raise ValueError, 'No data on channel %i' % chanInfo.chan
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NeuroTools/spike2/spike2channels.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/spike2/spike2channels.py", line 26
    print 'channel ',chan,' could not be read'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/NeuroTools/stgen.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/stgen.py", line 254
    print "ISI buf overrun handled. len(spikes)=%d, len(extra_spikes)=%d" % (len(spikes),len(extra_spikes))
                                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NeuroTools/tisean'...
Compiling './lib/python3.5/site-packages/NeuroTools/tisean/tisean.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/tisean/tisean.py", line 24
    print func
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/NeuroTools/utilities'...
Compiling './lib/python3.5/site-packages/NeuroTools/visual_logging.py'...
***   File "./lib/python3.5/site-packages/NeuroTools/visual_logging.py", line 154
    print zf.namelist()
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NeuroTools-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
